--- a/client/package.json
+++ b/client/package.json
@@ -19,11 +19,13 @@
     "@angular/platform-browser": "~11.2.10",
     "@angular/platform-browser-dynamic": "~11.2.10",
     "@angular/router": "~11.2.10",
+    "@kolkov/ngx-gallery": "^1.2.3",
     "@schematics/angular": "^9.1.8",
     "bootstrap": "4.1.1",
     "bootswatch": "^4.6.0",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^6.2.0",
+    "ngx-spinner": "^11.0.1",
     "ngx-toastr": "^13.2.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
