--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~11.2.10",
     "@angular/router": "~11.2.10",
     "@kolkov/ngx-gallery": "^1.2.3",
+    "@microsoft/signalr": "^5.0.5",
     "@schematics/angular": "^9.1.8",
     "bootstrap": "4.1.1",
     "bootswatch": "^4.6.0",
